# advent-of-code-2024

./: .gitignore
day02/: gleam.toml
day03/: README.md
day03/lib/: dune  part2.ml
day04/: README.md
day04/lib/: dune  utils.ml
day05/lib/: part1.ml  part1.mli
day06/: README.md
day07/: README.md  shard.yml
day07/src/: day7.cr
day08/: shard.yml
day09/: pyproject.toml
day1/: gleam.toml
day1/src/: day1.gleam  utils.gleam
day10/: mojoproject.toml
day10/src/: main.🔥
day11/src/: main.go
day2/: README.md  manifest.toml
day2/src/: day2.gleam  utils.gleam
day3/lib/: input.ml  part1.ml  part2.ml
day4/lib/: dune  part1.ml  part2.ml  utils.ml
day5/lib/: input.ml  part1.ml  part2.ml
day6/: LICENSE  day6.cabal
day6/app/: Main.hs
day7/: README.md
day7/spec/: day7_spec.cr
day7/src/: day7.cr
day8/: LICENSE  README.md
day8/spec/: day8_spec.cr
day8/src/: day8.cr
day9/: README.md
day9/day9/: main.py
