[tool.poetry]
name = "day9"
version = "0.1.0"
description = ""
authors = ["Arthur Fontaine <0arthur.fontaine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"


[tool.poetry.scripts]
main = "day9.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
